# lc_parallel_primitive

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  xmake.lua
src/lc_parallel_primitive/: parallel_primitive.h  template_struct.h  type_trait.h
src/lc_parallel_primitive/block/: block_discontinuity.h  block_exchange.h  block_load.h  block_reduce.h  block_scan.h  block_store.h
src/lc_parallel_primitive/block/detail/: block_reduce_mem.h  block_reduce_warp.h  block_scan_warp.h
src/lc_parallel_primitive/common/: keyvaluepair.h  template_struct.h  thread_operators.h  type_trait.h
src/lc_parallel_primitive/device/: device_for.h  device_reduce.h  device_scan.h
src/lc_parallel_primitive/device/details/: device_reduce.h  device_reduce_by_key.h
src/lc_parallel_primitive/runtime/: core.h
src/lc_parallel_primitive/thread/: thread_reduce.h  thread_scan.h
src/lc_parallel_primitive/thrust/: thrust_recude.h  thrust_scan.h
src/lc_parallel_primitive/warp/: warp_exchange.h  warp_reduce.h  warp_scan.h
src/lc_parallel_primitive/warp/details/: warp_scan_shlf.h
src/lcpp/: parallel_primitive.h
src/lcpp/agent/: agenet_radix_sort_onesweep.h  agent_radix_sort_histogram.h  agent_reduce.h  policy.h  radix_rank_sort_operations.h
src/lcpp/block/: block_discontinuity.h  block_exchange.h  block_load.h  block_radix_rank.h  block_reduce.h  block_scan.h  block_store.h  radix_rank_sort_operations.h
src/lcpp/block/detail/: block_reduce_mem.h  block_reduce_warp.h  block_scan_mem.h  block_scan_warp.h
src/lcpp/common/: grid_even_shared.h  keyvaluepair.h  thread_operators.h  type_trait.h  util_type.h  utils.h
src/lcpp/device/: device_for.h  device_histogram.h  device_radix_sort.h  device_reduce.h  device_scan.h  device_segment_reduce.h
src/lcpp/device/details/: device_reduce.h  device_reduce_by_key.h  radix_sort.h  reduce.h  reduce_by_key.h  scan.h  scan_by_key.h  segment_reduce.h  single_pass_scan_operator.h
src/lcpp/runtime/: core.h
src/lcpp/thread/: thread_reduce.h  thread_scan.h
src/lcpp/warp/: warp_exchange.h  warp_reduce.h  warp_scan.h
src/lcpp/warp/details/: warp_reduce_shlf.h  warp_scan_shlf.h
tests/: CMakeLists.txt  block_level_test.cpp  decoupled_look_back.cpp  device_level_test.cpp  device_radix_sort_one_sweep.cpp  device_reduce_test.cpp  device_scan_test.cpp  device_segment_reduce.cpp  main.cpp  warp_level_test.cpp  xmake.lua
xmake/: package.lua
